# ChangeLog for www-apache/passenger
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-apache/passenger/ChangeLog,v 1.67 2013/07/30 11:39:37 ago Exp $

  30 Jul 2013; Agostino Sarubbo <ago@gentoo.org> passenger-3.0.21.ebuild:
  Stable for amd64, wrt bug #477048

*passenger-4.0.10 (21 Jul 2013)

  21 Jul 2013; Hans de Graaff <graaff@gentoo.org>
  +files/30_mod_passenger-4.0.0.conf, +passenger-4.0.10.ebuild,
  +files/passenger-4.0.10-gentoo.patch, metadata.xml:
  Version bump to 4.x series. Now supports multiple ruby implementations and
  has many other changes and bug fixes.

  16 Jul 2013; Hans de Graaff <graaff@gentoo.org> -passenger-3.0.19.ebuild:
  Cleanup.

*passenger-3.0.21 (30 May 2013)

  30 May 2013; Hans de Graaff <graaff@gentoo.org> +passenger-3.0.21.ebuild:
  Version bump.

  06 May 2013; Hans de Graaff <graaff@gentoo.org> -passenger-3.0.7.ebuild,
  -passenger-3.0.18.ebuild:
  Cleanup.

*passenger-3.0.19 (19 Jan 2013)

  19 Jan 2013; Hans de Graaff <graaff@gentoo.org> +passenger-3.0.19.ebuild:
  Version bump.

  19 Jan 2013; Hans de Graaff <graaff@gentoo.org> -passenger-3.0.13.ebuild,
  -passenger-3.0.14.ebuild:
  Cleanup.

  02 Jan 2013; Andreas Schuerch <nativemad@gentoo.org> passenger-3.0.17.ebuild:
  x86 stable, see bug 440098

  27 Nov 2012; Pacho Ramos <pacho@gentoo.org> metadata.xml:
  Drop apache herd as discussed in http://www.gossamer-
  threads.com/lists/gentoo/dev/262834

  24 Nov 2012; Hans de Graaff <graaff@gentoo.org>
  files/30_mod_passenger-2.0.1.conf:
  Specify /usr/bin/ruby as the interpreter since this will work in most cases
  where people have a single RUBY_TARGET.

*passenger-3.0.18 (16 Nov 2012)

  16 Nov 2012; Patrick Lauer <patrick@gentoo.org> +passenger-3.0.18.ebuild:
  Bump

  04 Nov 2012; <ago@gentoo.org> passenger-3.0.17.ebuild:
  Stable for amd64, wrt bug #440098

  04 Nov 2012; Hans de Graaff <graaff@gentoo.org> passenger-3.0.17.ebuild: