@@ -1,12 +1,0 @@
-DEFINED_PHASES=compile install postinst setup unpack
-DEPEND=>=dev-lang/ruby-1.8.5 >=dev-ruby/rubygems-0.9.0 >=dev-ruby/rake-0.8.1 >=dev-ruby/fastthread-1.0.1 >=dev-ruby/rack-1.0.0 =www-servers/apache-2.2* =dev-lang/ruby-1.8*
-DESCRIPTION=Passenger (a.k.a. mod_rails) makes deployment of Ruby on Rails applications a breeze
-HOMEPAGE=http://modrails.com/
-IUSE=debug doc
-KEYWORDS=amd64 x86
-LICENSE=GPL-2
-RDEPEND=>=dev-lang/ruby-1.8.5 >=dev-ruby/rubygems-0.9.0 >=dev-ruby/rake-0.8.1 >=dev-ruby/fastthread-1.0.1 >=dev-ruby/rack-1.0.0 =www-servers/apache-2.2* =dev-lang/ruby-1.8*
-SLOT=0
-SRC_URI=mirror://rubyforge/passenger/passenger-2.2.15.tar.gz
-_eclasses_=apache-module	5c4c90da2d68c2dc8391666824f1293c	depend.apache	1a38534d3f755d1ab1d92ce120bd7dbd	eutils	63afaaed8aa819fdcb814c7cd39495a2	flag-o-matic	d900015de4e092f26d8c0a18b6bd60de	multilib	892e597faee02a5b94eb02ab512e7622	ruby	d0d4dafe867eb79ce8953e27d88fc00f	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=f0c5c82e6b524b38dff62c558c498a57
