@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 AUX 2.2.15-gentoo-multilib-strict.patch 1278 SHA256 dced348f25d2bb41dff59f51c1dd7a8b6771c81dd699a54170e3627bef12ddea SHA512 19bdd5fd1fe2d9ff0c6797acde965cddf0e997aac87a9572a0516143eeb1ae858b3fd298c186e611df9f6dc1380d3f4d85c7d5bb0141e82fc91e10072ef43c90 WHIRLPOOL 9368f5591cc3a9e6b69eaf0566747cda936fa447d75159dcef88b4869d17ff3568adc04a698f3cb74b8a2216e5c9fd982262b03e4ea2096f8596e4ebff91251b
 AUX 2.2.4-gentoo.patch 1617 SHA256 d90394f0742131f32dc42a9619305b2712bed3967b78d56480447500d190b8ea SHA512 5a80b36b0b62e2a450584f7a7c25f574ad0ae5b9be813ea94069a68583db4bc944e7624a53ac0b1c00eb56329b97f2f37027d530731633fdb4ff4461843a102c WHIRLPOOL 147dddd7762a6a914962283c6e6737e10575da03954e10ea5b70dc80c7e975461f61c21db0fc555ab442689ca3f8d812a252fba6b1a7ae0c95def409bc03e9e9
@@ -10,31 +10,18 @@ AUX passenger-3.0.0-ldflags.patch 572 SHA256 22b7c85b2c3e0fb2c0275e0a63308cf65aa
 AUX passenger-3.0.12-ldflags.patch 414 SHA256 b17694c0a148980e39e60d5582b3e6ee313b63858d4aa827afe71ba1e7c7790e SHA512 b23014f7fcc708f266a1460fc93565a449e0493ab546b4bb4e457a53dcdc1fb91abd29e8825a0f65c30d2dca57cb9ce455b66e3386559f1c490c48cedd586e7b WHIRLPOOL b06595f84feb1dfce5aaaa1f190681004eb3925dabe60aa1cd1a5895e20a9b6325b82a258ad0c3019a0d612f6448803b0ddd6a89ffa636c186b046be0bf2871c
 AUX passenger-3.0.8-gentoo.patch 1746 SHA256 d639c675c7d2c3c23001f33513d0758a33e7cdb88406a311608be2f47f746f2e SHA512 bef5911e4f574cd96e67f008517d082ca3dea3e59c3586aaf170fb472f406b4f73a1c583ace527f0f5ab2d0de4cb50c8e9aa4b995eeec4066ea26da93f4a8bc6 WHIRLPOOL 6ca98d8caa9e5ad40edad2c8198c1d1f7c5174c4017bed2bdfe6abdaf8c4f11736b9707f9b11d753e243150458c79bf2915ae4adc46d6dbe7ab6564d99ba7629
 AUX passenger-4.0.10-gentoo.patch 2131 SHA256 113e75b58164f05f901430ed4f426b73028143d1bdab632eab40ded620cbe4db SHA512 c9795cc79f80092828ffc9a53e417fccc11de8e2245de1e502df87302609a2769c1aa14940258484f886441a21857311f0ddf10f601fd3cc914a55bb4553dee4 WHIRLPOOL 6ae2fcd36128daf3af75add417161ae533f1048513939ef768577373eb591f5ba9a402654a852521a3edd151a15a4f4aaa4a5f48fea66146ac217797eb633974
-DIST passenger-2.2.15.tar.gz 2128473 SHA256 95a9f61070d268ecaa311539d8e28b348765ca0e1528665ef928fc4b4bcc1436 SHA512 a82f7d39d0a1053fd4b63c7d1464db54d229d0b42b326afc11dddef680938f522ba20b3bbd39ebb0241407b669dcdb7478c58420ca2f2225a9b2daa03ce8c17e WHIRLPOOL 0755d39c7d5abe804c7b47fba1fe8c309f1ce6cf8f3d4c419694559538842d9b2be69bbe79a2635c86de70dc8c286d6c9f53b1f3ee44963dea24cf3502337d1d
 DIST passenger-3.0.17.tar.gz 2667619 SHA256 3f1380cdf8342fd3b0df344b4b95e5f7810114dd331e56ca1900eda1f5747f01 SHA512 485a2e9893c81989cd89aae2d4922da4a0391b26687286f56c9b5d2b9b1e8e8e0607376895e7a44f7073743c1ea9f7de335420407145a39b1ab275e01bc77466 WHIRLPOOL e168e599d84d841ef4655905512f4b2e17e07d396793b7ea574cc587df634f4853635b8e9f3c8fefa33a74d6fb952be03284696b0fabeb39cd887b8eaf486cd2
 DIST passenger-3.0.21.tar.gz 2657475 SHA256 82a79a2ff6803e1669ebf806ab320180990ddc096e3d30977ad1c86081b594a5 SHA512 4e92fe8cc679776531a73525ac0dd99612096c1370b4019dcda54aa928cbf6ba17c024124286342209a2b9d1ec9cb22d3783fc6bedc85cb9a0d0fb7561995eec WHIRLPOOL 11f9a5655e7ebcfd9f4a03a63d077126a0766ed7ad92e24494c3515202603782d3a8c999b4662004577d3463de68c040d783d9f93c01f95aa935289c0628780d
 DIST passenger-4.0.10.tar.gz 3623488 SHA256 e83248bb54769fff87ad4778277240153f9972d9d5fb8fcda2eec45feb51dcc6 SHA512 5466f614f4037b03b46dfcf83cf79058771a1ca4c896b66c752aa05c0b9dafe8625e20c713b4b459e20af23200aaba461272c893084b84fe5e7faf5bd1acaab6 WHIRLPOOL 5e9291079d6d663531935e4341f0ffd5584c43782763e18975f22a3e05afaf39ea749cce1313f6ef6f5f67d5720ebb0410fba782576e1d5a162dd1efd4fcee22
-EBUILD passenger-2.2.15-r1.ebuild 1372 SHA256 5de33fbcfc3ab8c09f885fa7a15669cc37b942f4df58b55fc831818ad6206a22 SHA512 da9358bd38247437860aba55b8ab26c515c337298ff5ab69a066047d961db978576bcfde9ec4316ab6714c9748d838281b6df773c307cc55b66d1cc849ae0b8e WHIRLPOOL 0dbe621e85f8d3ad6fcaa9163cd593c8e82799582544f95b65218ba72ae0163c1b6eb45e575f4ed40d6e1df145f3a4aca1131c77e85c04b61cf3095784eb6ad2
-EBUILD passenger-2.2.15.ebuild 1310 SHA256 adfb99efd637dd1f9f6b7d87c751f86de68048349cb602b6a137aecb7794f016 SHA512 a928a41badb0cb122bd38476b1176b89dcabae27e3cc1907247086a27bf3b12252962f2b11f5f9f88d502a1a7204d394abd12d9bc2b01a4fce9cd2f8b898ee68 WHIRLPOOL 44db92c92505b434faf9488ffeb6bd715de02d51270b25afcbe40c5f1ef306856143b71ecc296dfa6cae28d4d9158577e1230e29732893dd62e9a03eb502a5f3
 EBUILD passenger-3.0.17.ebuild 3025 SHA256 af7a3fee5eb186cdc763e60d8eeb5a73a9dcf3e7ff72d4c019974257cbf046af SHA512 c4c398465fdccd78453d84916baa600e98141f4ff31bed6e1784c8f621e5657d5c71f4fe02c711640b069d2006afa7fb26bf4188971ec98f28f88924a8b3f892 WHIRLPOOL d9dda4ba8b783667ea3c5b1edea5c95b444c435d6305be5b2b59a08fa50c4bf4958a67fe6e280b5607be5c5c622273acaab7558ba4ddd7d1e7d145f8023e8554
 EBUILD passenger-3.0.21.ebuild 3020 SHA256 d78971ea0bf7fc4d026a30915fc64723408849ba45c8405e6eb9d1698340e629 SHA512 f06eaa666aa699180a32ec37698d347679c844ecc12e3c17055e714b1de4779bd38ef7b6a1aaf179ff5960a6bfee7d9127eecabd76d3efb38eb5b7042f0d8cfc WHIRLPOOL 608d7350f4ddcd202f3b853a200b9c9a427b58697d3aea9b684c7a30eb16972b25b69444a97b4ce318b0cf0f35864fa28c9cd1cd011f6c6b359a3a63220501bc
 EBUILD passenger-4.0.10.ebuild 3363 SHA256 1d6a750abaf02b6cbe92d3fcad92b41c7efa4c58b807b7ec0a5d2f591b290c33 SHA512 02e0bc3910712f6017b5167fff931829646fd49f2d65658e4650978e359d5844013af65fd290c71942cc4f19be6beb3e00f87b209362b39d6911f252f7e44273 WHIRLPOOL 4257d6cb49be09f8fab23a7d81ce3a9d9bbbb279b380fc8224e75d1087e02416a89808857ebb0ee6c11d1280ad7096338109e32fa0080290b8a80a744ed910a1
-MISC ChangeLog 10704 SHA256 5118ba5861b624264de5a0b2c2ef99f2aa09fb7a260ad3711ff508e4acf12bd3 SHA512 a72bbaecef348c5890d2d5e544d5f2597a0a55f04dcde649876a71fd9fb8ff1746e80e0605237e187cce79c9b79c1f2c9d26700241b8213ffbbc0bbd1de06f28 WHIRLPOOL 7bd6a293003e2b9646ee90522535b8c4cb97ba676650c2f8d666f5937279c333adda8c2cba2a6ac125f2cf86670b1e86102216cbf378143a43594f3e8c6c8133
+MISC ChangeLog 10853 SHA256 6e92e424d45b16d2ee6d4a8846d8770e776afee9ae665d1b867b83f4cb483072 SHA512 76a94d198c98b6b01ea81549107b04bd89c06b26a7aeebc7abd97234c969e41f18bfe995e283a48015be0bce0739146fd1af4ade2057ac8733330a2812ff9031 WHIRLPOOL 87ee153edb5cab4f8d141527732498c28f18c256a2123884e057c449ba9e36fa938a2d33f26703930df557fe0a9ea66a6e52c41f4f9f16ed7f9ca70da28e2ef7
 MISC metadata.xml 301 SHA256 867721645f57dbb8f265285065ec9f1dd6c2a22eedcf9ff39da9723b3e24dd88 SHA512 d5b721477a7b5b69ba5d26bd6d1a42f2acd7007ce511e6d9e4e6512721e80718758eea318a4f4af2cec6ae4a6fef6a323f163825fd73f470d9b9754012038b8f WHIRLPOOL 264e4bf232aafe04b68854c1a3252895cc54707ff3ab117bc7416eadf437358781ae058709ca5d40e72f1cf28238d36e7a19eddbe55f053ebeac2279ea7b296a
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQIcBAEBCgAGBQJR96X4AAoJELp701BxlEWfBX4P/ihDxxkUVlDWJY7FZ1l17E19
-P7dh2YuO2uFC8BTI1PDuBNLuFR8YpCVM1IHRbQmnsKB6L/bnhsr/ecZzRzCk0UAh
-7TY/An57SGgnERO1Uka8Lnvaxn1LQguJwtbIE/Jjw9lKmcOL/R4TQ18BXvcDEoTO
-/3dOYKZA2H4/XhK7sjSHTutX9a3/ZoA+NDpe+95fILMHuV7tGsnUIv3DGvzQ85rX
-NnRId2m2+qYGt7jbCkj7HORgB4ViO7wWDvUkAt017JZ1NrdlUv9Rs2Kf/ZRI2a+b
-JpKrImYHVUGZ3L3L9EbFqJNpsW94h7Y9FJUqSjr8tISatTkD1tUihAOThR5ALoaB
-r8yWXnc/zsMN0nloEPlONdUWdxoKbGNIo4b0yVvY7mVbBwzTKCJRiNElcevIJCfK
-GJjADq6P/WmiC8p5uCwKE7A8DqGl31VC0wQ3h463z73rDu6F2nCEalPbwCqZfnpN
-MuXR0IUniYkTOf5dALjyGd3vz9T/QQ5gKGAPfGNDSuUsnPKRZhfxwq79tQJxi4P2
-6MjkOVTYbrjNA+rA+TIGkFeyfSTOVXDyBWrN58su4w8BNucMWQ0cwOBG4uWtcKYe
-leY+1gPRDjp3kpm0Daay+6yeh90O5zoV+9Ujt/YMS9+dFHOHne/kVftpf3pst4id
-BZ0dMU+FIInNtIhxQJ0L
-=ugOd
+iF4EAREIAAYFAlH/380ACgkQiIP6VqMIqNf3uQD+NkfiqQrO6fI1F5sMpBMVbPSO
+kDzLVMpSHFzZyTa82P0A/jLiUeERa8PnCOpkvKD4mMB8vEBTUdaP4GiwBbJcX4pC
+=VtGq
 -----END PGP SIGNATURE-----
