@@ -1,6 +1,10 @@
 # ChangeLog for www-apache/passenger
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apache/passenger/ChangeLog,v 1.67 2013/07/30 11:39:37 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apache/passenger/ChangeLog,v 1.68 2013/08/05 17:24:22 graaff Exp $
+
+  05 Aug 2013; Hans de Graaff <graaff@gentoo.org> -passenger-2.2.15.ebuild,
+  -passenger-2.2.15-r1.ebuild:
+  Remove old versions for bug 479812.
 
   30 Jul 2013; Agostino Sarubbo <ago@gentoo.org> passenger-3.0.21.ebuild:
   Stable for amd64, wrt bug #477048
